# llm-prompt-significance-evaluator

./: .gitignore  README.md  evaluate_prompt_versions.py  prompt_scores.json  pyproject.toml  report.json  requirements.txt  streamlit_app.py
data/: baseline.csv  new.csv
docs/: architecture_presentation.md
src/prompt_stat_eval/: __init__.py  config.py  constants.py  normalize.py  pipeline.py  reporting.py  stats.py  validation.py
src/prompt_stat_eval/cli/: __init__.py  evaluate.py  ui.py
