[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-stat-eval"
version = "0.1.0"
description = "Paired statistical evaluation for trade confirmation field extraction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Prompt Stat Eval Team" }
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
prompt-stat-eval = "prompt_stat_eval.cli.evaluate:main"
prompt-stat-ui = "prompt_stat_eval.cli.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_stat_eval*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
